--- a/src/index.scss
+++ b/src/index.scss
@@ -115,9 +115,7 @@ $topbarcolor:#ffffff;
         }
         
        
-        .PortfolioContainer{
-            background-color: azure;
-        }
+       
         .TestimonialContainer{
             background-color: beige;
         }
@@ -129,54 +127,70 @@ $topbarcolor:#ffffff;
             justify-content: center;
             
             .arrows{
-                .LeftArrow{
-                    width: 20px;
-                    transform: rotate(180deg);
-                    padding: 10px;
-                }
+                cursor: pointer;
+                z-index: 3;
                 .RightArrow{
-                    width: 20px;
-                    padding: 10px;
+                    position: absolute;
+                    left: 10%;
+                    transform: rotate(180deg);
+                    top:50%;
+                    .RightArrowImage{
+                        width:20px;
+                    }
                 }
+                .LeftArrow{
+                    position: absolute;
+                    top: 50%;
+                    left: 90%;
+                    cursor: pointer;
+                    .LeftArrowImage{
+                        width:20px;
+                    }
+                }
+                
 
             }
-            .DesignationWorks{
-                width: 50%;
-                background: white;
-                height: 50%;
-                border-radius: 20px;
-                padding: 10px;
+            .slider{
                 display:flex;
-                .DesignationLeft{
-                    flex:4;
-                    padding:10px;
+                height:350px;
+                width:100%;
+                position:absolute;
+                left:0px;
+            }
+            .container{
+                width:50%;
+                margin:0 auto;
+                border-radius:10px;
+                background-color: white;
+                height:inherit;
+                .item{
+                    display:flex;
 
-                    .DesignationImage{
-                        width: 50px;
-                        background: pink;
-                        border-radius: 50%;
+                    .left{
+                        padding:20px;
+                        flex:4;
+                        .DesignationImage{
+                            width:30px;
+                            background-color: pink;
+                            border-radius:50%;
+                        }
+                        .DesignationTitle{
+                            margin:10px 0;
+                        }
+                        .DesignationLink{
+                            margin:10px 0;
+                            text-decoration: underline;
+                        }
                     }
-                    .DesignationContent{
-                        line-height: 1.5em;
-                        text-align: justify;
-                    }
-                    .DesignationLink{
-                        text-decoration: underline;
-                        font-weight: 500;
-                        cursor:pointer;
-                    }
-                   
-                }
-                .DesignationRight{
-                    flex:8;
+                    .right{
+                        flex:8;
 
-                    .Imge{
-                        width:90%;
-                        object-fit: cover;
+                        .RightImage{
+                            width:95%;
+                        }
                     }
                 }
             }
-            
         }
 
     }
